# 36-cowork

./: .gitignore  GEMINI.md  docker-compose.yml  roadmap.md  test_capacity_logic.py
backend/: pyproject.toml
backend/bookings/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
backend/bookings/management/commands/: populate_spaces.py
backend/bookings/migrations/: 0001_initial.py
backend/bookings/tests/: test_admin.py  test_api.py  test_default_availability.py  test_models.py  test_services.py  test_tasks.py  test_validators.py
backend/config/: dashboard.py  settings.py  urls.py
backend/templates/emails/: booking_confirmation.html
backend/users/: admin.py  managers.py  models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: OfficeLayout.jsx
frontend/src/components/booking/: AgreementCheckbox.jsx  BookingForm.jsx  BookingForm.test.jsx  BookingStepper.jsx  FormField.jsx  SpaceSelector.jsx  SpaceSelector.test.jsx  TimeSlotSelector.jsx
frontend/src/components/designed/: SignupForm.jsx
frontend/src/components/ui/: button.jsx  card.jsx  checkbox.jsx  input.jsx  label.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: BookingPage.jsx  ErrorPage.jsx  HomePage.jsx  LoginPage.jsx  RegisterPage.jsx  SuccessPage.jsx
frontend/src/services/: api.js
frontend/src/utils/: validation.js
